--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -1,3 +1,10 @@
+People nowadays have difficulty balancing their time at home and at work. Whether at home, in the office, or in school, writing assignments can take an enormous amount of valuable time. With the kind of lifestyle that many people have, it is very evident that many students do not take the time sit down and really put some thought in to the assignment before writing. Students who try and balance a full social life and school responsibilities often find it really difficult to make the two successfully work. 
+
+
+<a href="http://www.superiorthesis.com">College Admissions Essay</a>
+
+
+
 <img src="qof-logo.jpg" id="qoflogo" alt="image based on the hebrew
 7 	  	  symbol of the same name">
 8 	  	 
