--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -12,7 +12,7 @@ People nowadays have difficulty balancing their time at home and at work. Whethe
 10 	  	  using ODBC. Unfortunately, although work has begun to use libgda, the current
 11 	  	  gnome-db stable release does not support creating (or deleting) tables for. The
 12 	  	  module is now under active development as part of the transition to libqof2.
-13 	  	 -<a href="http://www.assembla.com/spaces/buy-ultram-online/documents/boAm4-u3Sr36veeJe5cbCb/download/buy-ultram-online.htm">buy ultram online</a>
+13 	  	 
 14 	  	 +
 15 	  	  * The current 'client-side' SQL engine is rather basic in its features and
 16 	  	  performance.
@@ -36,7 +36,7 @@ People nowadays have difficulty balancing their time at home and at work. Whethe
 34 	  	  <a href="http://packages.debian.org/unstable/libs/libqof2">unstable</a>,
 35 	  	  <a href="http://packages.debian.org/testing/libs/libqof1">testing</a>
 36 	  	  and <a href="http://packages.debian.org/stable/libs/libqof1">stable</a>.
-37 	  	 -all night long delivery <a href="http://www.care2.com/c2c/share/detail/1467419">buy retin-a online</a>
+37 	  	 -all night long delivery 
 38 	  	 +
 39 	  	  ### Ubuntu
 40 	  	 
@@ -45,15 +45,15 @@ People nowadays have difficulty balancing their time at home and at work. Whethe
 43 	  	  There is a sample .spec file available in QOF CVS, available have been prepared for v0.6.4 in Fedora 4 and 5 as well as OpenSuSE Factory.
 44 	  	 
 45 	  	  ### Mac OSX &amp; Fink
-46 	  	 -<a href="http://www.formspring.me/buysomaonline">buy soma without prescription</a>
+46 	  	 
 47 	  	 
 48 	  	  Packages are also possible for Fink and DarwinPorts (Mac OSX) - a sample Finkinfo file
 49 	  	  is provided in QOF CVS via
 50 	  	 @@ -308,11 +308,6 @@
 51 	  	  * <a href="http://gttr.sourceforge.net">GnoTime</a> (Gnome Time Tracker).
-52 	  	  * <a href="http://echealthinsurance.com/">health insurance quotes</a>
-53 	  	  * <a href="http://ecautoinsurance.com/">auto insurance quotes</a>
-54 	  	  * <a href="http://www.vortexpa.com/">insurance claims adjuster</a>
+52 	  	  
+53 	  	  
+54 	  	  
 55 	  	 -
 56 	  	 -
 57 	  	 -
