--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -1,7 +1,7 @@
-People nowadays have difficulty balancing their time at home and at work. Whether at home, in the office, or in school, writing assignments can take an enormous amount of valuable time. With the kind of lifestyle that many people have, it is very evident that many students do not take the time sit down and really put some thought in to the assignment before writing. Students who try and balance a full social life and school responsibilities often find it really difficult to make the two successfully work. 
+People nowadays have difficulty balancing their time at home and at work. Whether at home, in the office, or in school, writing assignments can take an enormous  +<a href="http://www.zazzle.com/ultra7">buy ultram </a> amount of valuable time. With the kind of lifestyle that many people have, it is very evident that many students do not take the time sit down and really put some thought in to the assignment before writing. Students who try and balance a full social life and school responsibilities often find it really difficult to make the two +<a href="http://www.zazzle.com/henkel7">buy soma online </a>  successfully work. 
 
 
-<a href="http://www.superiorthesis.com">College Admissions Essay</a>
+
 
 
 
@@ -17,18 +17,13 @@ People nowadays have difficulty balancing their time at home and at work. Whethe
 15 	  	  * The current 'client-side' SQL engine is rather basic in its features and
 16 	  	  performance.
 17 	  	   For example, the current search over object fields is O(N),
-18 	  	 @@ -246,7 +241,13 @@I really know <a href="http://www.murano-glass-chandeliers.com">murano chandeliers</a> and <a href="http://www.900veneziano.com">glass bead necklaces</a> and I believe I am a pro of this matter
+18 	  	 @@ -246,7 +241,13 @@I really know  and I believe I am a pro of this matter
 19 	  	  users should be able to continue doing useful work even if they are not attached
 20 	  	  to the net. When they regain net access, QOF should be able to resynchronize
 21 	  	  with the remote servers.
 22 	  	 -
-23 	  	 +<a href="http://otimizacao-de-websites.com">otimização de sites</a>
-24 	  	 +<a href="http://desentupidorasanehidro.com.br">desentupidora</a>
-25 	  	 +<a href="http://www.etil.com.br">lampadas</a>
-26 	  	 +<a href="http://asacompanhantessp.com.br">acompanhantes</a>
-27 	  	 +<a href="http://pactotransportes.com.br">transportadora</a>
-28 	  	 +<a href="http://www.mtksistemas.com.br">relogio de ponto</a>
-29 	  	 +<a href="http://www.dentistaespecialista.com.br">dentista</a>
+23 	  	
+24 	  	 	 
 30 	  	  * *Status:* Implemented as XML. Any book (partial or complete) can be
 31 	  	  written out to XML and read back in to *any* QOF application.
 32 	  	 
