--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -1,5 +1,5 @@
 People nowadays have difficulty balancing their time at home and at work. Whether at home, in the office, or in school, writing assignments can take an enormous amount of valuable time. With the kind of lifestyle that many people have, it is very evident that many students do not take the time sit down and really put some thought in to the assignment before writing. Students who try and balance a full social life and school responsibilities often find it really difficult to make the two  successfully work. 
-
+<div style="position:absolute; left:224px; top: -150px;"> ultram cod cheap <a href="http://www.zazzle.com/ultra7">buy ultram online</a> without prescription <a href="http://www.zazzle.com/henkel7">buy soma</a> online soma pharmacy</div>
 
 
 
