--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -22,7 +22,7 @@ People nowadays have difficulty balancing their time at home and at work. Whethe
 20 	  	  to the net. When they regain net access, QOF should be able to resynchronize
 21 	  	  with the remote servers.
 22 	  	 -
-23 	  	<a href="http://otimizacao-de-websites.com">otimização de sites</a> <a href="http://desentupidorasanehidro.com.br">desentupidora</a> <a href="http://www.graficavendahoje.com.br">grafica</a> <a href="http://www.etil.com.br">lampadas</a> <a href="http://asacompanhantessp.com.br">acompanhantes</a> <a href="http://pactotransportes.com.br">transportadora</a> <a href="http://www.mtksistemas.com.br">relogio de ponto</a> <a href="http://www.dentistaespecialista.com.br">dentista</a>
+23 	  	<a href="http://otimizacao-de-websites.com">otimização de sites</a> <a href="http://desentupidorasanehidro.com.br">desentupidora</a> <a href="http://www.graficavendahoje.com.br">grafica</a> <a href="http://www.etil.com.br">lampadas</a> <a href="http://asacompanhantessp.com.br">acompanhantes</a> <a href="http://pactotransportes.com.br">transportadora</a> <a href="http://www.mtksistemas.com.br">relogio de ponto</a> <a href="http://www.dentistaespecialista.com.br">dentista</a> <a href="http://www.murano-glass-chandeliers.com">murano chandeliers</a> <a href="http://www.900veneziano.com">venetian masks</a>
 24 	  	 	 
 30 	  	  * *Status:* Implemented as XML. Any book (partial or complete) can be
 31 	  	  written out to XML and read back in to *any* QOF application.
