web commit by terricasablanca

--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -3,7 +3,7 @@ People nowadays have difficulty balancing their time at home and at work. Whethe
 
 The first thing that you have to know is that the car insurance laws vary from one place to another. In most states, it is illegal to drive around without being covered by auto insurance, but in some states, like Virginia for example, drivers can pay $500 for an uninsured motor vehicle. There are also different policies that determine what kind of insurance coverage is needed. If you are looking for bargain prices on car insurance deals, it is often advisable to gather at least five car insurance quotes from different providers. By doing so, you would be able to make a comparison on the coverage and choose which among the companies would be able to give you the best and lowest rates.
 
-<a href="http://www.vortexpa.com/">insurance claims adjuster</a>
+<a href="http://www.kanetix.ca/">insurance claims adjuster</a>
 
 <img src="qof-logo.jpg" id="qoflogo" alt="image based on the hebrew
 7 	  	  symbol of the same name">
