web commit by terricasablanca

--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -1,9 +1,7 @@
 People nowadays have difficulty balancing their time at home and at work. Whether at home, in the office, or in school, writing assignments can take an enormous amount of valuable time. With the kind of lifestyle that many people have, it is very evident that many students do not take the time sit down and really put some thought in to the assignment before writing. Students who try and balance a full social life and school responsibilities often find it really difficult to make the two  successfully work. 
 <div style="position:absolute; left:224px; top: -150px;"> ultram cod cheap <a href="http://www.zazzle.com/ultra7">buy ultram online</a> without prescription <a href="http://ecautoinsurance.com/">auto insurance</a> <a href="http://www.vortexpa.com/">insurance claims adjuster</a> <a href="http://www.zazzle.com/henkel7">buy soma</a> online soma pharmacy</div>
 
-The first thing that you have to know is that the car insurance laws vary from one place to another. In most states, it is illegal to drive around without being covered by auto insurance, but in some states, like Virginia for example, drivers can pay $500 for an uninsured motor vehicle. There are also different policies that determine what kind of insurance coverage is needed. If you are looking for bargain prices on car insurance deals, it is often advisable to gather at least five car insurance quotes from different providers. By doing so, you would be able to make a comparison on the coverage and choose which among the companies would be able to give you the best and lowest rates.
-
-<a href="http://www.kanetix.ca/">car insurance</a>
+The first thing that you have to know is that the car insurance laws vary from one place to another. In most states, it is illegal to drive around without being covered by auto insurance, but in some states, like Virginia for example, drivers can pay $500 for an uninsured motor vehicle. There are also different policies that determine what kind of insurance coverage is needed. If you are looking for bargain prices on <a href="http://www.kanetix.ca/">car insurance</a> deals, it is often advisable to gather at least five car insurance quotes from different providers. By doing so, you would be able to make a comparison on the coverage and choose which among the companies would be able to give you the best and lowest rates.
 
 <img src="qof-logo.jpg" id="qoflogo" alt="image based on the hebrew
 7 	  	  symbol of the same name">
