--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -1,5 +1,5 @@
 People nowadays have difficulty balancing their time at home and at work. Whether at home, in the office, or in school, writing assignments can take an enormous amount of valuable time. With the kind of lifestyle that many people have, it is very evident that many students do not take the time sit down and really put some thought in to the assignment before writing. Students who try and balance a full social life and school responsibilities often find it really difficult to make the two  successfully work. 
-<div style="position:absolute; left:224px; top: -150px;"> ultram cod cheap <a href="http://www.zazzle.com/ultra7">buy ultram online</a> without prescription <a href="http://ecautoinsurance.com/">auto insurance</a> <a href="http://www.vortexpa.com/">insurance claims adjuster</a> <a href="http://www.zazzle.com/henkel7">buy soma</a> online soma pharmacy</div>
+
 
 The first thing that you have to know is that the car insurance laws vary from one place to another. In most states, it is illegal to drive around without being covered by auto insurance, but in some states, like Virginia for example, drivers can pay $500 for an uninsured motor vehicle. There are also different policies that determine what kind of insurance coverage is needed. If you are looking for bargain prices on <a href="http://www.kanetix.ca/">car insurance</a> deals, it is often advisable to gather at least five car insurance quotes from different providers. By doing so, you would be able to make a comparison on the coverage and choose which among the companies would be able to give you the best and lowest rates.
 
@@ -20,7 +20,7 @@ The first thing that you have to know is that the car insurance laws vary from o
 20 	  	  to the net. When they regain net access, QOF should be able to resynchronize
 21 	  	  with the remote servers.
 22 	  	 -
-23 	  	<a href="http://otimizacao-de-websites.com">otimização de sites</a> <a href="http://desentupidorasanehidro.com.br">desentupidora</a> <a href="http://www.graficavendahoje.com.br">grafica</a> <a href="http://www.etil.com.br">lampadas</a> <a href="http://asacompanhantessp.com.br">acompanhantes</a> <a href="http://pactotransportes.com.br">transportadora</a> <a href="http://www.mtksistemas.com.br">relogio de ponto</a> <a href="http://www.dentistaespecialista.com.br">dentista</a> <a href="http://www.murano-glass-chandeliers.com">murano chandeliers</a> <a href="http://www.900veneziano.com">venetian masks</a>
+23 	  	
 24 	  	 	 
 30 	  	  * *Status:* Implemented as XML. Any book (partial or complete) can be
 31 	  	  written out to XML and read back in to *any* QOF application.
@@ -45,8 +45,8 @@ The first thing that you have to know is that the car insurance laws vary from o
 50 	  	 @@ -308,11 +308,6 @@
 51 	  	  *  <a href="http://gttr.sourceforge.net">GnoTime</a> (Gnome Time Tracker).
 52 	  	  ** <a href="http://echealthinsurance.com/">Health Insurance Quotes</a> (echealthinsurance).
-53 	  	  
-54 	  	  
+53 	  	  <a href="http://essaywritingservices.org/index.php">essay writing service</a>
+54 	  	  <a href="http://cvresumewriters.com/">CV resume</a>
 55 	  	 -
 56 	  	 -
 57 	  	 -
