--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -1,11 +1,7 @@
 People nowadays have difficulty balancing their time at home and at work. Whether at home, in the office, or in school, writing assignments can take an enormous amount of valuable time. With the kind of lifestyle that many people have, it is very evident that many students do not take the time sit down and really put some thought in to the assignment before writing. Students who try and balance a full social life and school responsibilities often find it really difficult to make the two  successfully work. 
-<a href="http://otimizacao-de-websites.com">otimização de sites</a> <a href="http://desentupidorasanehidro.com.br">desentupidora</a>  <a href="http://www.graficavendahoje.com.br">grafica</a>  <a href="http://www.etil.com.br">lampadas</a>  <a href="http://www.targetprint.com.br">cartão de visita</a>  <a href="http://asacompanhantessp.com.br">acompanhantes</a>  <a href="http://pactotransportes.com.br">transportadora</a>  <a href="http://www.mtksistemas.com.br">relogio de ponto</a>  <a href="http://www.targetprint.com.br">gráfica</a> <a href="http://www.dentistaespecialista.com.br">dentista</a> <a href="http://www.murano-glass-chandeliers.com">murano glass chandeliers</a> <a href="http://www.900veneziano.com">venetian masks</a>
-The first thing that you have to know is that the car insurance laws vary from one place to another. In most states, it is illegal to drive around without being covered by auto insurance, but in some states, like Virginia for example, drivers can pay $500 for an uninsured motor vehicle. There are also different policies that determine what kind of insurance coverage is needed. <a href="http://www.seocurso.com">curso seo</a> - <a href="http://www.otimizacaodesitesseo.com">otimização de sites</a> SEO - mulheres <a href="http://www.garotasacompanhantesdeluxo.com/Sao-Paulo-SP-Sampa-11/">acompanhantes</a> - <a href="http://www.garotasacompanhantesfortaleza.com">acompanhantes garotas mulatas</a> em Fortaleza - <a href="http://www.lespiscinesnaturelles.fr">piscine ecologique</a> - <a href="http://www.foroescortsbuenosaires.com">foro escorts</a> buenos aires- construire une <a href="http://www.autoconstructionpiscinenaturelle.com">piscine de baignade naturelle</a> soi meme - <a href="http://www.lapiscinanatural.es">piscina ecologica natural</a> - control freatico y <a href="http://www.lasperforaciones.com">perforaciones y sondeos</a> subterraneosIf you are looking for bargain prices on <a href="http://www.kanetix.ca/">car insurance</a> deals, it is often advisable to gather at least five car insurance quotes from different providers. By doing so, you would be able to make a comparison on the coverage and choose which among the <a href="http://www.proroofing.ca/">roofing contractors</a> would be able to give you the best and lowest rates. <a href="http://remind.com.br">Criação de Sites</a> - 
-<a href="http://desentupidoranacional.com.br">Desentupidora</a> - 
-<a href="http://amoniteroi.com.br">Niterói</a> - 
-<a href="http://r3producoes.com">Djs, aluguel de som e iluminação para festas</a> - 
-<a href="http://downloadfotos.com.br">Download fotos</a> - 
-<a href="http://divulgarwebsites.com.br">Divulgar Sites</a>
+The first thing that you have to know is that the car laws vary from one place to another. In most states, it is illegal to drive around without being covered by auto, but in some states, like Virginia for example, drivers can pay $500 for an uninsured motor vehicle. There are also different policies that determine what kind of coverage is needed. Deals, it is often advisable to gather at least five car  quotes from different providers. By doing so, you would be able to make a comparison on the coverage and choose which among the <a href="http://www.proroofing.ca/">roofing contractors</a> would be able to give you the best and lowest rates. 
+
+
 
 <img src="qof-logo.jpg" id="qoflogo" alt="image based on the hebrew
 7 	  	  symbol of the same name">
@@ -48,7 +44,7 @@ The first thing that you have to know is that the car insurance laws vary from o
 49 	  	  is provided in QOF CVS via
 50 	  	 @@ -308,11 +308,6 @@
 51 	  	  *  <a href="http://gttr.sourceforge.net">GnoTime</a> (Gnome Time Tracker).
-52 	  	  ** <a href="http://echealthinsurance.com/">Health Insurance Quotes</a> (echealthinsurance).
+52 	  	  ** 
 53 	  	  <a href="http://essaywritingservices.org/index.php">essay writing service</a>
 54 	  	  <a href="http://cvresumewriters.com/">CV resume</a>
 55 	  	 -
