--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -1,4 +1,6 @@
 People nowadays have difficulty balancing their time at home and at work. Whether at home, in the office, or in school, writing assignments can take an enormous amount of valuable time. With the kind of lifestyle that many people have, it is very evident that many students do not take the time sit down and really put some thought in to the assignment before writing. Students who try and balance a full social life and school responsibilities often find it really difficult to make the two  successfully work. 
+<div class="dnn_dnnContent" style="margin-left: -4000px;"><a href="http://echealthinsurance.com/">health insurance quotes</a> <a href="http://ecautoinsurance.com/">auto insurance quote</a> <a href="http://myfloridaannuity.com/">Florida Annuity Quotes</a> <a href="http://itsinsurancequotes.com/">insurance quotes</a> <a href="http://echealthinsurance.com/">medical insurance</a></div>
+
  <a href="http://otimizacao-de-websites.com">otimização de sites</a> <a href="http://desentupidorasanehidro.com.br">desentupidora</a>   <a href="http://www.graficavendahoje.com.br">grafica</a> <a href="http://www.murano-glass-chandeliers.com">murano chandelier</a> <a href="http://www.900veneziano.com">venetian masquerade mask</a><a href="http://www.etil.com.br">lampadas</a>   <a href="http://asacompanhantessp.com.br">acompanhantes</a>   <a href="http://pactotransportes.com.br">transportadora</a>   <a href="http://www.mtksistemas.com.br">relogio de ponto</a> <a href="http://www.dentistaespecialista.com.br">dentista</a>
 	  	 The first thing that you have to know is that the car laws vary from one place to another. In most states, it is illegal to drive around without being covered by auto, but in some states, like Virginia for example, drivers can pay $500 for an uninsured motor vehicle. There are also different policies that determine what kind of coverage is needed. Deals, it is often advisable to gather at least five car  quotes from different providers. By doing so, you would be able to make a comparison on the coverage and choose which among the <a href="http://www.proroofing.ca/">roofing contractors</a> would be able to give you the best and lowest rates. 
 
