web commit by reckoner07

--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -59,3 +59,11 @@ People nowadays have difficulty balancing their time at home and at work. Whethe
 60 	  	 
 61 	  	  Written by Linas Vepstas &lt;linas@linas.org&gt; April 2004
 
+<p><a href=http://www.smalltattoosdesigns.com/design.asp?p=female>Female Tattoos</a></p>
+<p><a href=http://www.smalltattoosdesigns.com/>Small Tattoos</a></p>
+<p><a href="http://www.smalltattoosdesigns.com/design.asp?p=hand">Hand Tattoos</a></p>
+<p><a href=http://www.hairstylescutsimages.com/>Cool Hairstyles</a></p>
+<p><a href=http://www.hairstylescutsimages.com/>Female Hairstyles</a></p>
+<p><a href=http://www.hairstylescutsimages.com/>Female Haircuts</a></p>
+<p><a href=http://www.funny-animated.com/>Funny Animations</a></p>
+<p><a href=http://www.bestowseosolutions.com/>SEO</a></p>
