--- a/wiki/trunk/why-qof.mdwn
+++ b/wiki/trunk/why-qof.mdwn
@@ -1,8 +1,7 @@
-We are an organized group of writers who specialize in producing custom academic papers of the highest quality. We also provide many other services including editing, review and translation. Our aim is to become the best, most trusted and preferred site for those who seek excellent academic papers. We provide our clients with ability to fulfill their writing needs with a standard that is unmatched.
+People nowadays have difficulty balancing their time at home and at work. Whether at home, in the office, or in school, writing assignments can take an enormous amount of valuable time. With the kind of lifestyle that many people have, it is very evident that many students do not take the time sit down and really put some thought in to the assignment before writing. Students who try and balance a full social life and school responsibilities often find it really difficult to make the two successfully work.
 
 
-
-<a href="http://www.bestessays.com.au"> Bestessays</a>
+<a href="http://www.superiorthesis.com">College Admissions Essays</a>
 
 
 
