--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -4,8 +4,7 @@ People nowadays have difficulty balancing their time at home and at work. Whethe
 <a href="http://www.superiorthesis.com">Resume</a>
 
 
- <a href="http://otimizacao-de-websites.com">otimização de sites</a> <a href="http://desentupidorasanehidro.com.br">desentupidora</a>   <a href="http://www.graficavendahoje.com.br">grafica</a> <a href="http://www.murano-glass-chandeliers.com">murano chandelier</a> <a href="http://www.900veneziano.com">venetian masquerade mask</a><a href="http://www.etil.com.br">lampadas</a>   <a href="http://asacompanhantessp.com.br">acompanhantes</a>   <a href="http://pactotransportes.com.br">transportadora</a> - <a href="http://remind.com.br">Criação de Sites</a> - <a href="http://desentupidoranacional.com.br">Desentupidora SP</a> - <a href="http://amoniteroi.com.br">Amo Niterói</a> - <a href="http://r3producoes.com">Djs, aluguel de som e iluminação para festas</a> -  <a href="http://downloadfotos.com.br">Download fotos</a> - <a href="http://divulgarwebsites.com.br">Divulgar Sites</a> - <a href="http://tapetespersonalizados-rj.com.br">Tapetes Personalizados</a> 
-  <a href="http://www.mtksistemas.com.br">relogio de ponto</a> <a href="http://www.dentistaespecialista.com.br">dentista</a>
+ <a href="http://otimizacao-de-websites.com">otimização de sites</a> <a href="http://desentupidorasanehidro.com.br">desentupidora</a>   <a href="http://www.graficavendahoje.com.br">grafica</a> <a href="http://www.murano-glass-chandeliers.com">murano chandelier</a> <a href="http://www.900veneziano.com">venetian masquerade mask</a><a href="http://www.etil.com.br">lampadas</a> 
 	  	 The first thing that you have to know is that the car laws vary from one place to another. In most states, it is illegal to drive around without being covered by auto, but in some states, like Virginia for example, drivers can pay $500 for an uninsured motor vehicle. There are also different policies that determine what kind of coverage is needed. Deals, it is often advisable to gather at least five car  quotes from different providers. By doing so, you would be able to make a comparison on the coverage and choose which among the <a href="http://www.proroofing.ca/">roofing contractors</a> would be able to give you the best and lowest rates. 
 
 
@@ -62,11 +61,6 @@ People nowadays have difficulty balancing their time at home and at work. Whethe
 60 	  	 
 61 	  	  Written by Linas Vepstas &lt;linas@linas.org&gt; April 2004
 
-<p><a href=http://www.smalltattoosdesigns.com/design.asp?p=female>Female Tattoos</a></p>
-<p><a href=http://www.smalltattoosdesigns.com/>Small Tattoos</a></p>
-<p><a href="http://www.smalltattoosdesigns.com/design.asp?p=hand">Hand Tattoos</a></p>
-<p><a href=http://www.hairstylescutsimages.com/>Cool Hairstyles</a></p>
-<p><a href=http://www.hairstylescutsimages.com/>Female Hairstyles</a></p>
-<p><a href=http://www.hairstylescutsimages.com/>Female Haircuts</a></p>
+
 <p><a href=http://www.funny-animated.com/>Funny Animations</a></p>
 <p><a href=http://www.bestowseosolutions.com/>SEO</a></p>
