web commit by http://adminwiki.myopenid.com/: minoer change

--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -22,9 +22,9 @@ People nowadays have difficulty balancing their time at home and at work. Whethe
 16 	  	  performance.
 17 	  	   For example, the current search over object fields is O(N),
 18 	  	 @@ -246,7 +241,13 @@I really know  and I believe I am a pro of this matter
-19 	  	  users should be able to continue doing useful work even if they are not attached
+19 	  	  users should be able to continue doing useful <a href="http://www.globalseoconsultant.com/">Seo consultant</a> work even if they are not attached
 20 	  	  to the net. When they regain net access, QOF should be able to resynchronize
-21 	  	  with the remote servers.
+21 	  	  with the <a href="http://www.globalseoconsultant.com/seo-services/the-best-value-seo-services">seo services</a> remote servers.
 22 	  	 -
 23 	  	
 24 	  	 	 
