web commit by nash478

--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -1,14 +1,3 @@
-People nowadays have difficulty balancing their time at home and at work. Whether at home, in the office, or in school, writing assignments can take an enormous amount of valuable time. With the kind of lifestyle that many people have, it is very evident that many students do not take the time sit down and really put some thought in to the assignment before writing. Students who try and balance a full social life and school responsibilities often find it really difficult to make the two successfully work.
-
-
-<a href="http://www.superiorthesis.com">Resume</a>
-
-
- <a href="http://otimizacao-de-websites.com">otimização de sites</a> <a href="http://desentupidorasanehidro.com.br">desentupidora</a>   <a href="http://www.graficavendahoje.com.br">grafica</a> <a href="http://www.mtksistemas.com.br">relogio de ponto</a> <a href="http://asacompanhantessp.com.br">acompanhantes</a> <a href="http://www.etil.com.br">lampadas</a> <a href="http://pactotransportes.com.br">transportadora</a>
-	  	 The first thing that you have to know is that the car laws vary from one place to another. In most states, it is illegal to drive around without being covered by auto, but in some states, like Virginia for example, drivers can pay $500 for an uninsured motor vehicle. There are also different policies that determine what kind of coverage is needed. Deals, it is often advisable to gather at least five car  quotes from different providers. By doing so, you would be able to make a comparison on the coverage and choose which among the <a href="http://www.proroofing.ca/">roofing contractors</a> would be able to give you the best and lowest rates. 
-
-
-
 <img src="qof-logo.jpg" id="qoflogo" alt="image based on the hebrew
 7 	  	  symbol of the same name">
 8 	  	 
@@ -16,22 +5,22 @@ People nowadays have difficulty balancing their time at home and at work. Whethe
 10 	  	  using ODBC. Unfortunately, although work has begun to use libgda, the current
 11 	  	  gnome-db stable release does not support creating (or deleting) tables for. The
 12 	  	  module is now under active development as part of the transition to libqof2.
-13 	  	 
-14 	  	 +
+13 	  	 <a href="http://www.murano-glass-chandeliers.com" title="murano chandeliers">Murano chandeliers</a>
+14 	  	 <a href="www.900veneziano.com" title="venetian masks">venetian masks</a>
 15 	  	  * The current 'client-side' SQL engine is rather basic in its features and
 16 	  	  performance.
 17 	  	   For example, the current search over object fields is O(N),
 18 	  	 @@ -246,7 +241,13 @@I really know  and I believe I am a pro of this matter
-19 	  	  users should be able to continue doing useful <a href="http://www.globalseoconsultant.com/">Seo consultant</a> work even if they are not attached
+19 	  	  users should be able to continue doing useful work even if they are not attached
 20 	  	  to the net. When they regain net access, QOF should be able to resynchronize
-21 	  	  with the <a href="http://www.globalseoconsultant.com/seo-services/the-best-value-seo-services">seo services</a> remote servers.
+21 	  	  with the remote servers.
 22 	  	 -
 23 	  	
 24 	  	 	 
 30 	  	  * *Status:* Implemented as XML. Any book (partial or complete) can be
 31 	  	  written out to XML and read back in to *any* QOF application.
 32 	  	 
-33 	 <a href="http://www.careerwatcher.org">Resume Writing</a> 	 @@ -273,7 +274,7 @@
+33 	 	 @@ -273,7 +274,7 @@
 34 	  	  <a href="http://packages.debian.org/unstable/libs/libqof2">unstable</a>,
 35 	  	  <a href="http://packages.debian.org/testing/libs/libqof1">testing</a>
 36 	  	  and <a href="http://packages.debian.org/stable/libs/libqof1">stable</a>.
@@ -51,8 +40,8 @@ People nowadays have difficulty balancing their time at home and at work. Whethe
 50 	  	 @@ -308,11 +308,6 @@
 51 	  	  *  <a href="http://gttr.sourceforge.net">GnoTime</a> (Gnome Time Tracker).
 52 	  	  ** 
-53 	  	  <a href="http://essaywritingservices.org/index.php">essay writing service</a>
-54 	  	  <a href="http://cvresumewriters.com/">CV resume</a>
+53 	  	  
+54 	  	
 55 	  	 -
 56 	  	 -
 57 	  	 -
@@ -60,7 +49,3 @@ People nowadays have difficulty balancing their time at home and at work. Whethe
 59 	  	  ----
 60 	  	 
 61 	  	  Written by Linas Vepstas &lt;linas@linas.org&gt; April 2004
-
-
-<p><a href=http://www.funny-animated.com/>Funny Animations</a></p>
-<p><a href=http://www.bestowseosolutions.com/>SEO</a></p>
