web commit by SteveFrem

--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -12,7 +12,7 @@
 17 	  	   For example, the current search over object fields is O(N),
 18 	  	 @@ -246,7 +241,13 @@I really know  and I believe I am a pro of this matter
 19 	  	  users should be able to continue doing useful work even if they are not attached
-20 	  	  to the net. When they regain net access, QOF should be able to resynchronize
+20 	  	  to the net <a href="http://www.equityreleaseuk.net">Equity release uk</a>. When they regain net access, QOF should be able to resynchronize
 21 	  	  with the remote <a href="http://www.globalseoconsultant.com">seo consultant</a> <a href="http://www.globalseoconsultant.com/category/seo-services">seo services</a> servers.
 22 	  	 <a href="http://otimizacao-de-websites.com">otimização de sites</a> <a href="http://desentupidorasanehidro.com.br">desentupidora</a>  <a href=”http://www.targetprint.com.br”>cartao de visita </a> <a href=”http://www.graftec-grafica.com.br”>grafica</a> <a href=”http://www.graftec-grafica.com.br”>editora</a>  <a href=”http://www.eartecnica.com.br”>etiquetas</a> <a  href=”http://www.eartecnica.com.br”>comunicação visual</a> <a href="http://www.graficavendahoje.com.br">grafica</a>  <a href="http://www.mtksistemas.com.br">relogio de ponto</a> <a href="http://asacompanhantessp.com.br">acompanhantes</a>  <a href="http://www.etil.com.br">lampadas</a>  <a href="http://pactotransportes.com.br">transportadora</a>
 23 	  	
