--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -5,16 +5,14 @@
 10 	  	  using ODBC. Unfortunately, although work has begun to use libgda, the current
 11 	  	  gnome-db stable release does not support creating (or deleting) tables for. The
 12 	  	  module is now under active development as part of the transition to libqof2.
-13 	  	 <a href="http://www.murano-glass-chandeliers.com" title="murano chandeliers">Murano chandeliers</a>
-14 	  	 <a href="http://www.900veneziano.com" title="venetian masks">venetian masks</a>
 15 	  	  * The current 'client-side' SQL engine is rather basic in its features and
 16 	  	  performance.
 17 	  	   For example, the current search over object fields is O(N),
 18 	  	 @@ -246,7 +241,13 @@I really know  and I believe I am a pro of this matter
 19 	  	  users should be able to continue doing useful work even if they are not attached
-20 	  	  to the net <a href="http://www.equityreleaseuk.net">Equity release uk</a>. When they regain net access, QOF should be able to resynchronize
-21 	  	  with the remote <a href="http://www.globalseoconsultant.com">seo consultant</a> <a href="http://www.globalseoconsultant.com/category/seo-services">seo services</a> servers.
-22 	  	 <a href="http://otimizacao-de-websites.com">otimização de sites</a> <a href="http://desentupidorasanehidro.com.br">desentupidora</a>  <a href=”http://www.targetprint.com.br”>cartao de visita </a> <a href=”http://www.graftec-grafica.com.br”>grafica</a> <a href=”http://www.graftec-grafica.com.br”>editora</a>  <a href=”http://www.eartecnica.com.br”>etiquetas</a> <a  href=”http://www.eartecnica.com.br”>comunicação visual</a> <a href="http://www.graficavendahoje.com.br">grafica</a>  <a href="http://www.mtksistemas.com.br">relogio de ponto</a> <a href="http://asacompanhantessp.com.br">acompanhantes</a>  <a href="http://www.etil.com.br">lampadas</a>  <a href="http://pactotransportes.com.br">transportadora</a> <a href="http://www.bestcertifiednursingassistant.com/red-cross/red-cross-cna-classes-option">red cross cna classes</a> | 
+20 	  	  to the net . When they regain net access, QOF should be able to resynchronize
+21 	  	  with the remote <a href="http://www.globalseoconsultant.com">seo consultant</a>  servers.
+22 	  	  | 
 23 	  	
 24 	  	 	 
 30 	  	  * *Status:* Implemented as XML. Any book (partial or complete) can be
@@ -24,7 +22,7 @@
 34 	  	  <a href="http://packages.debian.org/unstable/libs/libqof2">unstable</a>,
 35 	  	  <a href="http://packages.debian.org/testing/libs/libqof1">testing</a>
 36 	  	  and <a href="http://packages.debian.org/stable/libs/libqof1">stable</a>.
-37 	  	 -all night long delivery <a href="http://www.bestcertifiednursingassistant.com/cna/cna-certification-test">cna certification test</a>
+37 	  	 -all night long delivery <div class="dnn_dnnContent" style="margin-left: -900px;"><a href="http://www.care2.com/c2c/share/detail/1467419">buy retin-a online </a></div>
 38 	  	 +
 39 	  	  ### Ubuntu
 40 	  	 
