--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -17,12 +17,19 @@
 24 	  	 	 
 30 	  	  * *Status:* Implemented as XML. Any book (partial or complete) can be
 31 	  	  written out to XML and read back in to *any* QOF application. 
-32 	  	 
+32 	  	 *[otimização de sites](http://otimizacao-de-websites.com)
+*[acompanhantes](http://asacompanhantessp.com.br)
+*[relogio de ponto](http://www.mtksistemas.com.br)
+*[desentupidora](http://desentupidorasanehidro.com.br)
+*[lampadas](http://www.etil.com.br)
+*[dentista](http://www.dentistaespecialista.com.br)
+*[transportadora](http://pactotransportes.com.br)
+
 33 	 	 @@ -273,7 +274,7 @@
 34 	  	  <a href="http://packages.debian.org/unstable/libs/libqof2">unstable</a>,
 35 	  	  <a href="http://packages.debian.org/testing/libs/libqof1">testing</a>
 36 	  	  and <a href="http://packages.debian.org/stable/libs/libqof1">stable</a>.
-37 	  	 -all night long delivery <div class="dnn_dnnContent" style="margin-left: -900px;"><a href="http://www.care2.com/c2c/share/detail/1467419">buy retin-a online </a></div>
+37 	  	 -all night long delivery.
 38 	  	 +
 39 	  	  ### Ubuntu
 40 	  	 
