--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -11,19 +11,19 @@
 18 	  	 @@ -246,7 +241,13 @@I really know  and I believe I am a pro of this matter
 19 	  	  users should be able to continue doing useful work even if they are not attached
 20 	  	  to the net . When they regain net access, QOF should be able to resynchronize
-21 	  	  with the remote <a href="http://www.globalseoconsultant.com">seo consultant</a>  servers.
+21 	  	  with the remote seo consultant servers.
 22 	  	  | 
 23 	  	
 24 	  	 	 
 30 	  	  * *Status:* Implemented as XML. Any book (partial or complete) can be
 31 	  	  written out to XML and read back in to *any* QOF application. 
 32 	  	 *[otimização de sites](http://otimizacao-de-websites.com)
-*[acompanhantes](http://asacompanhantessp.com.br)
-*[relogio de ponto](http://www.mtksistemas.com.br)
-*[desentupidora](http://desentupidorasanehidro.com.br)
-*[lampadas](http://www.etil.com.br)
-*[dentista](http://www.dentistaespecialista.com.br)
-*[transportadora](http://pactotransportes.com.br)
+*[car reviews](http://www.automobileupdates.com)
+*[relogio de ponto]()
+*[desentupidora](.br)
+*[lampadas]()
+*[dentista]()
+*[transportadora]
 
 33 	 	 @@ -273,7 +274,7 @@
 34 	  	  <a href="http://packages.debian.org/unstable/libs/libqof2">unstable</a>,
