web commit by williama5

--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -57,6 +57,4 @@
 
 
 
-<div style="margin-left: -4000px;">
-*[criar site](http://www.sitegratisgratis.com.br)
-</div>
+[criar site](http://www.sitegratisgratis.com.br) [elevadores](http://www.elevadoresmais.com.br) [joomla](http://www.templatejoomla.com.br) [barra funda](http://www.barrafunda.org) [itaquera](http://www.negociosemitaquera.com.br) [hospedagem](http://hospedagemsites10.com.br)
