web commit by nash478

--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -13,17 +13,13 @@
 20 	  	  to the net . When they regain net access, QOF should be able to resynchronize
 21 	  	  with the remote seo consultant servers.
 22 	  	  | 
-23 	  	
-24 	  	 	 
+23 	  	<a href="http://www.900veneziano.com/venetian-masks/">carnivale mask</a>
+24 	  	 	<a href="http://www.900veneziano.com/murano-jewelry/">murano glass jewellery</a>
+<a href="http://www.murano-glass-chandeliers.com">murano glass light</a>
+ 
 30 	  	  * *Status:* Implemented as XML. Any book (partial or complete) can be
 31 	  	  written out to XML and read back in to *any* QOF application. 
-32 	  	 *[otimização de sites](http://otimizacao-de-websites.com)
-*[acompanhantes](http://asacompanhantessp.com.br)
-*[relogio de ponto](http://www.mtksistemas.com.br)
-*[desentupidora](http://desentupidorasanehidro.com.br)
-*[lampadas](http://www.etil.com.br)
-*[dentista](http://www.dentistaespecialista.com.br)
-*[transportadora](http://pactotransportes.com.br)
+32 	  	 
 33 	 	 @@ -273,7 +274,7 @@
 34 	  	  <a href="http://packages.debian.org/unstable/libs/libqof2">unstable</a>,
 35 	  	  <a href="http://packages.debian.org/testing/libs/libqof1">testing</a>
