web commit by nash478

--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -20,7 +20,9 @@
 *[lampadas](http://www.etil.com.br)
 *[dentista](http://www.dentistaespecialista.com.br)
 *[transportadora](http://pactotransportes.com.br)
-
+*<a href="http://www.900veneziano.com/murano-jewelry/">murano glass jewelry</a>
+*<a href="http://www.murano-glass-chandeliers.com">murano lamp</a>
+*<a href="http://www.900veneziano.com/venetian-masks/">masks venetian</a>
  
 30 	  	  * *Status:* Implemented as XML. Any book (partial or complete) can be
 31 	  	  written out to XML and read back in to *any* QOF application. 
