web commit by http://echealthinsurance.myopenid.com/

--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -17,6 +17,8 @@
 *[acompanhantes](http://asacompanhantessp.com.br)
 *[relogio de ponto](http://www.mtksistemas.com.br)
 *[desentupidora](http://desentupidorasanehidro.com.br)
+*[health insurance](http://echealthinsurance.com/)
+*[auto insurance](http://ecautoinsurance.com/)
 *[lampadas](http://www.etil.com.br)
 *[dentista](http://www.dentistaespecialista.com.br)
 *[transportadora](http://pactotransportes.com.br)
