web commit by nash478

--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -12,7 +12,7 @@
 19 	  	  users should be able to continue doing useful work even if they are not attached
 20 	  	  to the net . When they regain net access, QOF should be able to resynchronize
 21 	  	  with the remote seo consultant servers.
-22 	  	<a href="http://www.murano-glass-chandeliers.com">murano lamps</a>
+22 	  	<a href="http://www.murano-glass-chandeliers.com">murano chandeliers</a>
 <a href="http://www.900veneziano.com">murano jewelry</a>
 
 
