web commit by nash478

--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -13,7 +13,7 @@
 20 	  	  to the net . When they regain net access, QOF should be able to resynchronize
 21 	  	  with the remote seo consultant servers.
 22 	  	<a href="http://www.murano-glass-chandeliers.com">murano chandeliers</a>
-<a href="http://www.900veneziano.com">murano jewelry</a>
+<a href="http://www.900veneziano.com">venetian masks</a>
 
 
 
