--- a/debian/trunk/debian/changelog
+++ b/debian/trunk/debian/changelog
@@ -2,8 +2,9 @@ qof (0.8.2-1) unstable; urgency=low
 
   * New upstream release.
   * [INTL:DE] Adds German translation (Closes: #539249)
+  * Improve QofDate for gcc-4.5 (Closes: #565090)
 
- -- Neil Williams <codehelp@debian.org>  Thu, 06 Aug 2009 22:00:00 +0100
+ -- Neil Williams <codehelp@debian.org>  Tue, 27 Jul 2010 20:16:30 +0100
 
 qof (0.8.1-1) unstable; urgency=low
 
