Ignore nuisance check with gcc-4.6 -Werror by removing some but marking most as unused despite actually being used. (Closes: #625422)

--- a/debian/trunk/debian/changelog
+++ b/debian/trunk/debian/changelog
@@ -1,3 +1,10 @@
+qof (0.8.3-1) unstable; urgency=low
+
+  * Ignore nuisance check with gcc-4.6 -Werror by removing some but marking
+    most as unused despite actually being used. (Closes: #625422)
+
+ -- Neil Williams <codehelp@debian.org>  Wed, 04 May 2011 21:16:38 +0100
+
 qof (0.8.2-1) unstable; urgency=low
 
   * New upstream release.
