Drop jquery.js from doxygen output (lintian)

--- a/debian/trunk/debian/changelog
+++ b/debian/trunk/debian/changelog
@@ -3,8 +3,9 @@ qof (0.8.3-1) unstable; urgency=low
   * Ignore nuisance check with gcc-4.6 -Werror by removing some but marking
     most as unused despite actually being used. (Closes: #625422)
   * Drop .la file from libqof-dev.
+  * Drop jquery.js from doxygen output (lintian)
 
- -- Neil Williams <codehelp@debian.org>  Wed, 04 May 2011 22:15:05 +0100
+ -- Neil Williams <codehelp@debian.org>  Wed, 04 May 2011 22:16:16 +0100
 
 qof (0.8.2-1) unstable; urgency=low
 
