--- a/debian/trunk/debian/changelog
+++ b/debian/trunk/debian/changelog
@@ -1,3 +1,9 @@
+qof (0.8.7-2) unstable; urgency=medium
+
+  * Add autoreconf support for porting.
+
+ -- Neil Williams <codehelp@debian.org>  Fri, 29 Aug 2014 10:59:30 -0700
+
 qof (0.8.7-1) unstable; urgency=low
 
   * New upstream release
